TOP-HTML記述・画像追加

--- a/index.html
+++ b/index.html
@@ -23,10 +23,25 @@
           </span>
         </li>
         <li><a href="">Home</a></li>
-
+        <li>
+          <span class="material-icons">
+            person
+          </span>
+        </li>
         <li><a href="">About</a></li>
+        <li><span class="material-icons">
+            work
+          </span></li>
         <li><a href="">Works</a></li>
+        <li><span class="material-icons">
+            edit
+          </span>
+        </li>
         <li><a href="">Blog</a></li>
+        <li><span class="material-icons">
+            email
+          </span>
+        </li>
         <li><a href="">Contact</a></li>
       </ul>
     </nav>
@@ -44,7 +59,7 @@
 
     <section>
       <h2>About</h2>
-      <img src="" alt="プロフィールアイコン">
+      <img src="Image/Datch-icon1.png" alt="プロフィールアイコン">
       <div>だっち/KouheiHonda</div>
       <ul>
         <li><i class="fab fa-youtube"></i></li>
@@ -59,7 +74,7 @@
     <section>
       <h2>Works</h2>
       <h3>YouTubePR</h3>
-      <img src="" alt="YouTubePRサムネイル">
+      <img src="./Image/YouTube-1.jpg" alt="YouTubePRサムネイル">
       <p>
         「適切に伝える」をモットーに、ガジェット・雑貨製品を、累計5本以上のPR動画制作を行っています。詳しい実績については以下「READ MORE」よりご確認下さい。
       </p>
@@ -69,13 +84,12 @@
 
     <section>
       <h3>VideoProduction</h3>
-      <img src="" alt="VideoProductionサムネイル">
+      <img src="./Image/Video-1.jpg" alt="VideoProductionサムネイル">
       <p>
         主に社交ダンスのジャンルを中心に映像制作を行っています。社交ダンス経験者・YouTuber、それぞれの視点から映像制作だけでなく、YouTubeチャンネル運営のアドバイスも行っています。
       </p>
       <button>ReadMore</button>
     </section>
-
   </main>
 
   <footer>
