topページ全体のレイアウトコーディング

--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
           <li><i class="fab fa-instagram"></i></li>
         </div>
       </ul>
-      <p class="to-about-para">
-        1992年生まれ28歳。現在は自動車メーカーにてサスペンション機構設計を担当。趣味でYouTubeにて自分が使って良かった「モノ・サービス」を紹介しており、現在チャンネル登録者5000人↑、総再生回数120万回↑。2020年10月より、Webデザイン・プログラミングを学習中。学生時代、「社交ダンス」の九州チャンピオンという異例な経歴も…。
-      </p>
+      <div class="top-about-para">
+        <p>
+          1992年生まれ28歳。現在は自動車メーカーにてサスペンション機構設計を担当。趣味でYouTubeにて自分が使って良かった「モノ・サービス」を紹介しており、現在チャンネル登録者5000人↑、総再生回数120万回↑。2020年10月より、Webデザイン・プログラミングを学習中。学生時代、「社交ダンス」の九州チャンピオンという異例な経歴も…。
+        </p>
+      </div>
     </section>
 
-    <section class="top-contents">
+    <section class="top-ytworks">
       <h2>Works</h2>
       <h3>YouTubePR</h3>
       <!-- <img src="./Image/YouTube-1.jpg" alt="YouTubePRサムネイル"> -->
@@ -92,10 +94,11 @@
         「適切に伝える」をモットーに、ガジェット・雑貨製品を、累計5本以上のPR動画制作を行っています。詳しい実績については以下「READ MORE」よりご確認下さい。
       </p>
       <button>ReadMore</button>
+      <div class="btn-YT"></div>
       <button>YouTube</button>
     </section>
 
-    <section class="top-contents">
+    <section class="top-vpworks">
       <h3>VideoProduction</h3>
 
       <!-- <img src="./Image/Video-1.jpg" alt="VideoProductionサムネイル"> -->
@@ -108,9 +111,11 @@
 
   <footer>
     <ul>
-      <li><i class="fab fa-youtube"></i></li>
-      <li><i class="fab fa-twitter"></i></li>
-      <li><i class="fab fa-instagram"></i></li>
+      <div>
+        <li><i class="fab fa-youtube"></i></li>
+        <li><i class="fab fa-twitter"></i></li>
+        <li><i class="fab fa-instagram"></i></li>
+      </div>
     </ul>
     <small>&copy;2020DatchLive</small>
   </footer>
