TOPページレイアウト完成・Aboutページ作成

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <header>
-    <!-- <h1>Datchlive</h1> -->
+
     <nav>
       <ul>
         <div class="navigation-btn">
@@ -53,17 +53,18 @@
       </ul>
 
     </nav>
-    <!-- <div class="prof">
+    <div class="prof">
+      <h1>Datchlive</h1>
       <ul>
         <li class="prof-name">KoheiHonda</li>
         <li class="prof-work">YouTubeCreater</li>
         <div class="prof-icon">
-          <li><i class="fab fa-youtube"></i></li>
-          <li><i class="fab fa-twitter"></i></li>
-          <li><i class="fab fa-instagram"></i></li>
+          <li><a href="https://www.youtube.com/user/datchlivetv"><i class="fab fa-youtube"></i></a></li>
+          <li><a href="https://twitter.com/datchlive"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/datchlive/"><i class="fab fa-instagram"></i></a></li>
         </div>
       </ul>
-    </div> -->
+    </div>
   </header>
 
   <main>
@@ -74,9 +75,9 @@
       <div class="top-about-name">だっち/KouheiHonda</div>
       <ul>
         <div class="top-about-sns">
-          <li><i class="fab fa-youtube"></i></li>
-          <li><i class="fab fa-twitter"></i></li>
-          <li><i class="fab fa-instagram"></i></li>
+          <li><a href="https://www.youtube.com/user/datchlivetv"><i class="fab fa-youtube"></i></a></li>
+          <li><a href="https://twitter.com/datchlive"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/datchlive/"><i class="fab fa-instagram"></i></a></li>
         </div>
       </ul>
       <div class="top-about-para">
@@ -89,32 +90,40 @@
     <section class="top-ytworks">
       <h2>Works</h2>
       <h3>YouTubePR</h3>
-      <!-- <img src="./Image/YouTube-1.jpg" alt="YouTubePRサムネイル"> -->
-      <p>
-        「適切に伝える」をモットーに、ガジェット・雑貨製品を、累計5本以上のPR動画制作を行っています。詳しい実績については以下「READ MORE」よりご確認下さい。
-      </p>
-      <button>ReadMore</button>
-      <div class="btn-YT"></div>
-      <button>YouTube</button>
+      <div class="thumbnail">
+        <img src="./Image/YouTube-1.jpg" alt="YouTubePRサムネイル">
+      </div>
+      <div class="top-ytworks-para">
+        <p>
+          「適切に伝える」をモットーに、ガジェット・雑貨製品を、累計5本以上のPR動画制作を行っています。詳しい実績については以下「READ MORE」よりご確認下さい。
+        </p>
+      </div>
+      <a href="" class="btn">ReadMore</a>
+      <div class="btn-YT">
+        <a href="" class="btn">YouTube</a>
+      </div>
     </section>
 
     <section class="top-vpworks">
       <h3>VideoProduction</h3>
-
-      <!-- <img src="./Image/Video-1.jpg" alt="VideoProductionサムネイル"> -->
-      <p>
-        主に社交ダンスのジャンルを中心に映像制作を行っています。社交ダンス経験者・YouTuber、それぞれの視点から映像制作だけでなく、YouTubeチャンネル運営のアドバイスも行っています。
-      </p>
-      <button>ReadMore</button>
+      <div class="thumbnail">
+        <img src="./Image/Video-1.jpg" alt="VideoProductionサムネイル">
+      </div>
+      <div class="top-vpworks-para">
+        <p>
+          主に社交ダンスのジャンルを中心に映像制作を行っています。社交ダンス経験者・YouTuber、それぞれの視点から映像制作だけでなく、YouTubeチャンネル運営のアドバイスも行っています。
+        </p>
+      </div>
+      <a href="" class="btn">ReadMore</a>
     </section>
   </main>
 
   <footer>
     <ul>
       <div>
-        <li><i class="fab fa-youtube"></i></li>
-        <li><i class="fab fa-twitter"></i></li>
-        <li><i class="fab fa-instagram"></i></li>
+        <li><a href="https://www.youtube.com/user/datchlivetv"><i class="fab fa-youtube"></i></a></li>
+        <li><a href="https://twitter.com/datchlive"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://www.instagram.com/datchlive/"><i class="fab fa-instagram"></i></a></li>
       </div>
     </ul>
     <small>&copy;2020DatchLive</small>
