Top・Aboutレイアウトコーディング

--- a/About/about.html
+++ b/About/about.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Datchlive</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
@@ -15,6 +15,82 @@
 </head>
 
 <body>
+  <header class="bottom-header">
+    <nav class="nav">
+      <ul class="nav-list">
+        <div class="nav-btn">
+          <li class="nav-icon"><a href=""><span class="material-icons">home</span></a></li>
+          <li class="nav-text"><a href="">Home</a></li>
+        </div>
+        <div class="nav-btn">
+          <li class="nav-icon"><a href="./About/about.html"><span class="material-icons">person</span></a></li>
+          <li class="nav-text"><a href="./About/about.html">About</a></li>
+        </div>
+        <div class="nav-btn">
+          <li class="nav-icon"><a href=""><span class="material-icons">work</span></a></li>
+          <li class="nav-text"><a href="">Works</a></li>
+        </div>
+        <div class="nav-btn">
+          <li class="nav-icon"><a href=""><span class="material-icons">edit</span></a></li>
+          <li class="nav-text"><a href="">Blog</a></li>
+        </div>
+        <div class="nav-btn">
+          <li class="nav-icon"><a href=""><span class="material-icons">email</span></a></li>
+          <li class="nav-text"><a href="">Contact</a></li>
+        </div>
+      </ul>
+    </nav>
+    <h1>Datchlive</h1>
+  </header>
+  <h2>About</h2>
+  <section class="about">
+    <h3>Profile</h3>
+    <div class="about-image">
+      <img src="../Image/Datch-icon2.jpg" alt="プロフィールアイコン">
+    </div>
+    <div class="about-info">
+      <div class="about-name">だっち/KouheiHonda</div>
+      <div class="about-para">
+        <p>
+          1992年生まれ28歳。新卒で自動車メーカーに入社し、サスペンション機構設計を担当。学生時代にYouTubeチャンネル「DatchLiveTv」を開設し、現在チャンネル登録者5000人↑、総再生回数120万回↑まで成長。2020年より映像制作も始め、Webデザイン・プログラミング学習を始める。
+        </p>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="career">
+    <h3>Career</h3>
+    <dl>
+      <div class="career-ivent">
+        <dt class="career-year">1992年</dt>
+        <dd>長崎県で生まれ、高校生まで過ごす。</dd>
+      </div>
+      <div class="career-ivent">
+        <dt class="career-year">2012年</dt>
+        <dd>九州工業大学機械知能工学部入学。北九州へ引っ越す。舞踏研究部に所属し、社交ダンスを始める。</dd>
+      </div>
+      <div class="career-ivent">
+        <dt class="career-year">2013年</dt>
+        <dd>YouTubeチャンネル「だっち/DatchLiveTv」を開設。</dd>
+      </div>
+      <div class="career-ivent">
+        <dt class="career-year">2016年</dt>
+        <dd>自動車メーカーに就職。神奈川県湘南へ引っ越す。</dd>
+      </div>
+      <div class="career-ivent">
+        <dt class="career-year">2020年</dt>
+        <dd>YouTubeチャンネル登録者5000人達成。</dd>
+      </div>
+    </dl>
+  </section>
+
+  <section class="media">
+    <h3>Media</h3>
+    <ul>
+      <li><a href="https://www.ichi-oshi.jp/articles/guide/10116">「イチオシ」にて商品レビュー記事掲載中</a></li>
+    </ul>
+  </section>
 
   <footer>
     <ul>
