--- a/index.html
+++ b/index.html
@@ -16,42 +16,30 @@
 
 <body>
 
-  <header>
-
-    <nav>
-      <ul>
-        <div class="navigation-btn">
-          <li><span class="material-icons">home</span></li>
-          <li class="text"><a href="">Home</a></li>
+  <header class="top-header">
+    <nav class="nav">
+      <ul class="nav-list">
+        <div class="nav-btn">
+          <li class="nav-icon"><a href=""><span class="material-icons">home</span></a></li>
+          <li class="nav-text"><a href="">Home</a></li>
         </div>
-        <div class="navigation-btn">
-          <li>
-            <span class="material-icons">person</span>
-          </li>
-          <li class="text"><a href="">About</a></li>
+        <div class="nav-btn">
+          <li class="nav-icon"><a href="./About/about.html"><span class="material-icons">person</span></a></li>
+          <li class="nav-text"><a href="./About/about.html">About</a></li>
         </div>
-        <div class="navigation-btn">
-          <li>
-            <span class="material-icons">work</span>
-          </li>
-          <li class="text"><a href="">Works</a></li>
+        <div class="nav-btn">
+          <li class="nav-icon"><a href=""><span class="material-icons">work</span></a></li>
+          <li class="nav-text"><a href="">Works</a></li>
         </div>
-        <div class="navigation-btn">
-          <li><span class="material-icons">
-              edit
-            </span>
-          </li>
-          <li class="text"><a href="">Blog</a></li>
+        <div class="nav-btn">
+          <li class="nav-icon"><a href=""><span class="material-icons">edit</span></a></li>
+          <li class="nav-text"><a href="">Blog</a></li>
         </div>
-        <div class="navigation-btn">
-          <li><span class="material-icons">
-              email
-            </span>
-          </li>
-          <li class="text"><a href="">Contact</a></li>
+        <div class="nav-btn">
+          <li class="nav-icon"><a href=""><span class="material-icons">email</span></a></li>
+          <li class="nav-text"><a href="">Contact</a></li>
         </div>
       </ul>
-
     </nav>
     <div class="prof">
       <h1>Datchlive</h1>
@@ -85,6 +73,7 @@
           1992年生まれ28歳。現在は自動車メーカーにてサスペンション機構設計を担当。趣味でYouTubeにて自分が使って良かった「モノ・サービス」を紹介しており、現在チャンネル登録者5000人↑、総再生回数120万回↑。2020年10月より、Webデザイン・プログラミングを学習中。学生時代、「社交ダンス」の九州チャンピオンという異例な経歴も…。
         </p>
       </div>
+      <a href="About/about.html" class="btn">ReadMore</a>
     </section>
 
     <section class="top-ytworks">
@@ -98,9 +87,13 @@
           「適切に伝える」をモットーに、ガジェット・雑貨製品を、累計5本以上のPR動画制作を行っています。詳しい実績については以下「READ MORE」よりご確認下さい。
         </p>
       </div>
-      <a href="" class="btn">ReadMore</a>
-      <div class="btn-YT">
-        <a href="" class="btn">YouTube</a>
+      <div class="ytworks-btn">
+        <div class="btn-RM">
+          <a href="" class="btn">ReadMore</a>
+        </div>
+        <div class="btn-YT">
+          <a href="" class="btn">YouTube</a>
+        </div>
       </div>
     </section>
 
