Worksページ作成

--- a/Works/works.html
+++ b/Works/works.html
@@ -42,54 +42,61 @@
     </nav>
     <h1 class="sitelogo-bottom">Datchlive</h1>
   </header>
-  <h2 class="title-bottom">About</h2>
-  <section class="about wrapper">
-    <h3>Profile</h3>
-    <div class="about-image">
-      <img src="../Image/Datch-icon2.jpg" alt="プロフィールアイコン">
-    </div>
-    <div class="about-info">
-      <div class="about-name">だっち/KouheiHonda</div>
-      <div class="about-para">
-        <p>
-          1992年生まれ28歳。新卒で自動車メーカーに入社し、サスペンション機構設計を担当。学生時代にYouTubeチャンネル「DatchLiveTv」を開設し、現在チャンネル登録者5000人↑、総再生回数120万回↑まで成長。2020年より映像制作も始め、Webデザイン・プログラミング学習を始める。
-        </p>
+  <h2 class="title-bottom">Works</h2>
+
+  <section class="wrapper">
+    <h3>YouTubePR</h3>
+    <div class="container">
+      <div>
+        <img src="../Image/YouTube-1.jpg" alt="YouTubePRサムネイル1">
+      </div>
+      <div>
+        <img src="../Image/YouTube-2.jpg" alt="YouTubePRサムネイル2">
+      </div>
+      <div>
+        <img src="../Image/YouTube-3.jpg" alt="YouTubePRサムネイル3">
+      </div>
+      <div>
+        <img src="../Image/YouTube-4.jpg" alt="YouTubePRサムネイル4">
+      </div>
+      <div>
+        <img src="../Image/YouTube-5.jpg" alt="YouTubePRサムネイル5">
       </div>
     </div>
+    <div class="works-para">
+      <p>
+        ご依頼はお問い合わせフォームよりどうぞ。通常3日以内には返信致します。現在レビューに関しましては、有料のプロモーション依頼のみ承っております。(1万円〜 ※要相談。無料・製品提供のPRはお受けしておりません。)
+      </p>
+    </div>
+    <a href="" class="btn">問い合わせ</a>
+    <a href="https://www.youtube.com/user/datchlivetv" class="btn">YouTube</a>
   </section>
 
-  <section class="career wrapper">
-    <h3>Career</h3>
-    <dl>
-      <div class="career-ivent">
-        <dt class="career-year">1992年</dt>
-        <dd>長崎県で生まれ、高校生まで過ごす。</dd>
+  <section class="wrapper">
+    <h3>VideoProduction</h3>
+    <div class="container">
+      <div>
+        <img src="../Image/Video-1.jpg" alt="Videoサムネイル1">
       </div>
-      <div class="career-ivent">
-        <dt class="career-year">2012年</dt>
-        <dd>九州工業大学機械知能工学部入学。北九州へ引っ越す。舞踏研究部に所属し、社交ダンスを始める。</dd>
+      <div>
+        <img src="../Image/Video-2.jpg" alt="Videoサムネイル2">
       </div>
-      <div class="career-ivent">
-        <dt class="career-year">2013年</dt>
-        <dd>YouTubeチャンネル「だっち/DatchLiveTv」を開設。</dd>
+      <div>
+        <img src="../Image/Video-3.jpg" alt="Videoサムネイル3">
       </div>
-      <div class="career-ivent">
-        <dt class="career-year">2016年</dt>
-        <dd>自動車メーカーに就職。神奈川県湘南へ引っ越す。</dd>
-      </div>
-      <div class="career-ivent">
-        <dt class="career-year">2020年</dt>
-        <dd>YouTubeチャンネル登録者5000人達成。</dd>
-      </div>
-    </dl>
+    </div>
+    <div class="works-para">
+      <p>
+        ご依頼はお問い合わせフォームよりどうぞ。通常3日以内には返信致します。撮影日は基本土日のみ承っております。撮影後、映像データ納品まで約3週間程お時間が掛かります。(撮影・編集 3万円〜 ※要相談。)
+      </p>
+    </div>
+    <a href="" class="btn">問い合わせ</a>
   </section>
 
-  <section class="media wrapper">
-    <h3>Media</h3>
-    <ul>
-      <li><a href="https://www.ichi-oshi.jp/articles/guide/10116">「イチオシ」にて商品レビュー記事掲載中</a></li>
-    </ul>
-  </section>
+
+
+
+
 
   <footer>
     <ul>
