--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
           <li class="nav-text"><a href="./About/about.html">About</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">work</span></a></li>
-          <li class="nav-text"><a href="">Works</a></li>
+          <li class="nav-icon"><a href="./Works/works.html"><span class="material-icons">work</span></a></li>
+          <li class="nav-text"><a href="./Works/works.html">Works</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">edit</span></a></li>
-          <li class="nav-text"><a href="">Blog</a></li>
+          <li class="nav-icon"><a href="./Blog/blog.html"><span class="material-icons">edit</span></a></li>
+          <li class="nav-text"><a href="./Blog/blog.html">Blog</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">email</span></a></li>
-          <li class="nav-text"><a href="">Contact</a></li>
+          <li class="nav-icon"><a href="./Contact/contact.html"><span class="material-icons">email</span></a></li>
+          <li class="nav-text"><a href="./Contact/contact.html">Contact</a></li>
         </div>
       </ul>
     </nav>
     <div class="prof">
-      <h1>Datchlive</h1>
+      <h1 class="sitelogo-top">Datchlive</h1>
       <ul>
         <li class="prof-name">KoheiHonda</li>
         <li class="prof-work">YouTubeCreater</li>
@@ -57,8 +57,8 @@
 
   <main>
 
-    <section class="top-about">
-      <h2>About</h2>
+    <section class="top-about wrapper">
+      <h2 class="title-top">About</h2>
       <img src="Image/Datch-icon1.png" alt="プロフィールアイコン" class="top-about-prof">
       <div class="top-about-name">だっち/KouheiHonda</div>
       <ul>
@@ -76,11 +76,11 @@
       <a href="About/about.html" class="btn">ReadMore</a>
     </section>
 
-    <section class="top-ytworks">
-      <h2>Works</h2>
+    <section class="top-ytworks wrapper">
+      <h2 class="title-top">Works</h2>
       <h3>YouTubePR</h3>
       <div class="thumbnail">
-        <img src="./Image/YouTube-1.jpg" alt="YouTubePRサムネイル">
+        <img src="./Image/YouTube-1.jpg" alt="YouTubePRサムネイル1">
       </div>
       <div class="top-ytworks-para">
         <p>
@@ -97,7 +97,7 @@
       </div>
     </section>
 
-    <section class="top-vpworks">
+    <section class="top-vpworks wrapper">
       <h3>VideoProduction</h3>
       <div class="thumbnail">
         <img src="./Image/Video-1.jpg" alt="VideoProductionサムネイル">
