問い合わせフォーム作成

--- a/About/about.html
+++ b/About/about.html
@@ -19,24 +19,24 @@
     <nav class="nav">
       <ul class="nav-list">
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">home</span></a></li>
-          <li class="nav-text"><a href="">Home</a></li>
+          <li class="nav-icon"><a href="../index.html"><span class="material-icons">home</span></a></li>
+          <li class="nav-text"><a href="../index.html">Home</a></li>
         </div>
         <div class="nav-btn">
           <li class="nav-icon"><a href="./About/about.html"><span class="material-icons">person</span></a></li>
           <li class="nav-text"><a href="./About/about.html">About</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">work</span></a></li>
-          <li class="nav-text"><a href="">Works</a></li>
+          <li class="nav-icon"><a href="../Works/works.html"><span class="material-icons">work</span></a></li>
+          <li class="nav-text"><a href="../Works/works.html">Works</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">edit</span></a></li>
-          <li class="nav-text"><a href="">Blog</a></li>
+          <li class="nav-icon"><a href="../Blog/blog.html"><span class="material-icons">edit</span></a></li>
+          <li class="nav-text"><a href="../Blog/blog.html">Blog</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">email</span></a></li>
-          <li class="nav-text"><a href="">Contact</a></li>
+          <li class="nav-icon"><a href="../Contact/contact.html"><span class="material-icons">email</span></a></li>
+          <li class="nav-text"><a href="../Contact/contact.html">Contact</a></li>
         </div>
       </ul>
     </nav>
