--- a/Works/works.html
+++ b/Works/works.html
@@ -23,20 +23,20 @@
           <li class="nav-text"><a href="">Home</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href="./About/about.html"><span class="material-icons">person</span></a></li>
-          <li class="nav-text"><a href="./About/about.html">About</a></li>
+          <li class="nav-icon"><a href="../About/about.html"><span class="material-icons">person</span></a></li>
+          <li class="nav-text"><a href="../About/about.html">About</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">work</span></a></li>
-          <li class="nav-text"><a href="">Works</a></li>
+          <li class="nav-icon"><a href="../Works/works.html"><span class="material-icons">work</span></a></li>
+          <li class="nav-text"><a href="../Works/works.html">Works</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">edit</span></a></li>
-          <li class="nav-text"><a href="">Blog</a></li>
+          <li class="nav-icon"><a href="../Blog/blog.html"><span class="material-icons">edit</span></a></li>
+          <li class="nav-text"><a href="../Blog/blog.html">Blog</a></li>
         </div>
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">email</span></a></li>
-          <li class="nav-text"><a href="">Contact</a></li>
+          <li class="nav-icon"><a href="../Contact/contact.html"><span class="material-icons">email</span></a></li>
+          <li class="nav-text"><a href="../Contact/contact.html">Contact</a></li>
         </div>
       </ul>
     </nav>
@@ -44,22 +44,22 @@
   </header>
   <h2 class="title-bottom">Works</h2>
 
-  <section class="wrapper">
+  <section class="bottom-ytworks wrapper">
     <h3>YouTubePR</h3>
     <div class="container">
-      <div>
+      <div class="works-image">
         <img src="../Image/YouTube-1.jpg" alt="YouTubePRサムネイル1">
       </div>
-      <div>
+      <div class="works-image">
         <img src="../Image/YouTube-2.jpg" alt="YouTubePRサムネイル2">
       </div>
-      <div>
+      <div class="works-image">
         <img src="../Image/YouTube-3.jpg" alt="YouTubePRサムネイル3">
       </div>
-      <div>
+      <div class="works-image">
         <img src="../Image/YouTube-4.jpg" alt="YouTubePRサムネイル4">
       </div>
-      <div>
+      <div class="works-image">
         <img src="../Image/YouTube-5.jpg" alt="YouTubePRサムネイル5">
       </div>
     </div>
@@ -68,11 +68,15 @@
         ご依頼はお問い合わせフォームよりどうぞ。通常3日以内には返信致します。現在レビューに関しましては、有料のプロモーション依頼のみ承っております。(1万円〜 ※要相談。無料・製品提供のPRはお受けしておりません。)
       </p>
     </div>
-    <a href="" class="btn">問い合わせ</a>
-    <a href="https://www.youtube.com/user/datchlivetv" class="btn">YouTube</a>
+    <div class="ytworks-btn">
+      <a href="../Contact/contact.html" class="btn">問い合わせ</a>
+      <div class="btn-YT">
+        <a href="https://www.youtube.com/user/datchlivetv" class="btn">YouTube</a>
+      </div>
+    </div>
   </section>
 
-  <section class="wrapper">
+  <section class="bottom-vpworks wrapper">
     <h3>VideoProduction</h3>
     <div class="container">
       <div>
@@ -90,7 +94,9 @@
         ご依頼はお問い合わせフォームよりどうぞ。通常3日以内には返信致します。撮影日は基本土日のみ承っております。撮影後、映像データ納品まで約3週間程お時間が掛かります。(撮影・編集 3万円〜 ※要相談。)
       </p>
     </div>
-    <a href="" class="btn">問い合わせ</a>
+    <div>
+      <a href="../Contact/contact.html" class="btn">問い合わせ</a>
+    </div>
   </section>
 
 
