--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <nav class="nav">
       <ul class="nav-list">
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">home</span></a></li>
-          <li class="nav-text"><a href="">Home</a></li>
+          <li class="nav-icon"><a href="#"><span class="material-icons">home</span></a></li>
+          <li class="nav-text"><a href="#">Home</a></li>
         </div>
         <div class="nav-btn">
           <li class="nav-icon"><a href="./About/about.html"><span class="material-icons">person</span></a></li>
@@ -43,7 +43,7 @@
     </nav>
     <div class="prof">
       <h1 class="sitelogo-top">Datchlive</h1>
-      <ul>
+      <ul class="prof-list">
         <li class="prof-name">KoheiHonda</li>
         <li class="prof-work">YouTubeCreater</li>
         <div class="prof-icon">
@@ -89,10 +89,10 @@
       </div>
       <div class="ytworks-btn">
         <div class="btn-RM">
-          <a href="" class="btn">ReadMore</a>
+          <a href="./Works/works.html" class="btn">ReadMore</a>
         </div>
         <div class="btn-YT">
-          <a href="" class="btn">YouTube</a>
+          <a href="https://www.youtube.com/user/datchlivetv" class="btn">YouTube</a>
         </div>
       </div>
     </section>
@@ -107,7 +107,7 @@
           主に社交ダンスのジャンルを中心に映像制作を行っています。社交ダンス経験者・YouTuber、それぞれの視点から映像制作だけでなく、YouTubeチャンネル運営のアドバイスも行っています。
         </p>
       </div>
-      <a href="" class="btn">ReadMore</a>
+      <a href="./Works/works.html" class="btn">ReadMore</a>
     </section>
   </main>
 
