--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -54,15 +54,14 @@
 
     <label for="form-detail" class="form-label">お問い合わせ内容</label>
 
-    <input type="checkbox">
-    <label for="">商品PR</label>
-
-    <input type="checkbox">
-    <label for="">映像制作</label>
-
-    <input type="checkbox">
-    <label for="">その他</label>
-
+    <div>
+      <input type="checkbox">
+      <label for="">商品PR</label>
+      <input type="checkbox">
+      <label for="">映像制作</label>
+      <input type="checkbox">
+      <label for="">その他</label>
+    </div>
     <p><textarea id="form-detail" name="entry.◯◯◯◯" required=""></textarea></p>
 
     <p class="form-terms">※送信時に利用規約に同意したとみなします</p>
