--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -45,24 +45,37 @@
 
   <h2 class="title-bottom">Contact</h2>
 
-  <form action="◯◯◯◯（GoogleフォームのURL）" class="form wrapper">
+  <form
+    action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSeie7y4yf4d7SwzQ9pnziGQz7bmF9abc9--xnuNnKBd2CZwRA/formResponse"
+    class="form wrapper">
     <label for="form-name" class="form-label">お名前</label>
-    <p class="form-text"><input id="form-name" type="text" name="entry.◯◯◯◯" required=""></p>
+    <p class="form-text"><input id="form-name" type="text" name="entry.584812737" required=""></p>
 
     <label for="form-mail" class="form-label">メールアドレス</label>
-    <p class="form-text"><input id="form-mail" type="email" name="entry.◯◯◯◯" required=""></p>
+    <p class="form-text"><input id="form-mail" type="email" name="entry.202158772" required=""></p>
 
     <label for="form-detail" class="form-label">お問い合わせ内容</label>
 
-    <div>
-      <input type="checkbox">
-      <label for="">商品PR</label>
-      <input type="checkbox">
-      <label for="">映像制作</label>
-      <input type="checkbox">
-      <label for="">その他</label>
+    <div class="checkbox">
+      <label class="checkbox-box">
+        <input type="checkbox">
+        <span class="checkbox-icon"></span>
+        商品PR
+      </label>
+      <label class="checkbox-box">
+        <input type="checkbox">
+        <span class="checkbox-icon"></span>
+        映像制作
+      </label>
+      <label class="checkbox-box">
+        <input type="checkbox">
+        <span class="checkbox-icon"></span>
+        その他
+      </label>
     </div>
-    <p><textarea id="form-detail" name="entry.◯◯◯◯" required=""></textarea></p>
+
+
+    <p><textarea id="form-detail" name="entry.1427036631" required=""></textarea></p>
 
     <p class="form-terms">※送信時に利用規約に同意したとみなします</p>
 
