--- a/About/about.html
+++ b/About/about.html
@@ -42,7 +42,7 @@
     </nav>
     <h1 class="sitelogo-bottom">Datchlive</h1>
   </header>
-  <h2 class="title-bottom">About</h2>
+  <h2 class="title-bottom wrapper">About</h2>
   <section class="about wrapper">
     <h3>Profile</h3>
     <div class="about-image">
