--- a/Works/works.html
+++ b/Works/works.html
@@ -42,7 +42,7 @@
     </nav>
     <h1 class="sitelogo-bottom">Datchlive</h1>
   </header>
-  <h2 class="title-bottom">Works</h2>
+  <h2 class="title-bottom wrapper">Works</h2>
 
   <section class="bottom-ytworks wrapper">
     <h3>YouTubePR</h3>
