--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -19,8 +19,8 @@
     <nav class="nav">
       <ul class="nav-list">
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">home</span></a></li>
-          <li class="nav-text"><a href="">Home</a></li>
+          <li class="nav-icon"><a href="../index.html"><span class="material-icons">home</span></a></li>
+          <li class="nav-text"><a href="../index.html">Home</a></li>
         </div>
         <div class="nav-btn">
           <li class="nav-icon"><a href="../About/about.html"><span class="material-icons">person</span></a></li>
@@ -43,7 +43,7 @@
     <h1 class="sitelogo-bottom">Datchlive</h1>
   </header>
 
-  <h2 class="title-bottom">Contact</h2>
+  <h2 class="title-bottom wrapper">Contact</h2>
 
   <form
     action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSeie7y4yf4d7SwzQ9pnziGQz7bmF9abc9--xnuNnKBd2CZwRA/formResponse"
@@ -52,23 +52,23 @@
     <p class="form-text"><input id="form-name" type="text" name="entry.584812737" required=""></p>
 
     <label for="form-mail" class="form-label">メールアドレス</label>
-    <p class="form-text"><input id="form-mail" type="email" name="entry.202158772" required=""></p>
+    <p class="form-text"><input id="form-mail" type="email" name="entry.202158772" required="" maxlength="100"></p>
 
     <label for="form-detail" class="form-label">お問い合わせ内容</label>
 
     <div class="checkbox">
       <label class="checkbox-box">
-        <input type="checkbox">
+        <input type="checkbox" name="entry.12043036">
         <span class="checkbox-icon"></span>
         商品PR
       </label>
       <label class="checkbox-box">
-        <input type="checkbox">
+        <input type="checkbox" name="entry.12043036">
         <span class="checkbox-icon"></span>
         映像制作
       </label>
       <label class="checkbox-box">
-        <input type="checkbox">
+        <input type="checkbox" name="entry.12043036">
         <span class="checkbox-icon"></span>
         その他
       </label>
