--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -80,6 +81,8 @@
     <section class="top-ytworks wrapper">
       <h2 class="title-top">Works</h2>
       <h3>YouTubePR</h3>
+
+
       <div class="thumbnail">
         <img src="./Image/YouTube-1.jpg" alt="YouTubePRサムネイル1">
       </div>
@@ -122,6 +125,10 @@
     </ul>
     <small>&copy;2020DatchLive</small>
   </footer>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+
+
 
 </body>
 
