--- a/Works/works.html
+++ b/Works/works.html
@@ -19,8 +19,8 @@
     <nav class="nav">
       <ul class="nav-list">
         <div class="nav-btn">
-          <li class="nav-icon"><a href=""><span class="material-icons">home</span></a></li>
-          <li class="nav-text"><a href="">Home</a></li>
+          <li class="nav-icon"><a href="../index.html"><span class="material-icons">home</span></a></li>
+          <li class="nav-text"><a href="../index.html">Home</a></li>
         </div>
         <div class="nav-btn">
           <li class="nav-icon"><a href="../About/about.html"><span class="material-icons">person</span></a></li>
@@ -98,11 +98,6 @@
       <a href="../Contact/contact.html" class="btn">問い合わせ</a>
     </div>
   </section>
-
-
-
-
-
 
   <footer>
     <ul>
